fix(VTimelineItem): fix flickering on clickable v-card
fixes #14193

--- a/packages/vuetify/src/components/VTimeline/VTimeline.sass
+++ b/packages/vuetify/src/components/VTimeline/VTimeline.sass
@@ -98,6 +98,9 @@
 
     &:before
       top: calc(50% - #{$timeline-wedge-size} + 2px)
+      bottom: auto
+      opacity: unset
+      background: none
 
 // Modifiers
 .v-timeline--align-top
